--- a/University/index.html
+++ b/University/index.html
@@ -95,7 +95,7 @@
 									</div>
 									<div class="block-match__item">Дослідження операцій - 1 курс</div>
 									<div class="block-match__item">Теорія ймовірності - 2 курс</div>	
-									<div class="block-match__item">Чсельні методи - 2 курс</div>
+									<div class="block-match__item">Чисельні методи - 2 курс</div>
 									<div class="block-match__item">Теорія ігор - 5 курс
 										<article class="block-match__inform">
 											Теорія ігор – це суворе стратегічне мислення, це математична теорія конфліктних ситуацій,  це мистецтво передбачати наступний хід суперника, при тому, що він займається тим же самим. Вивчення цієї теорії може сформувати новий погляд на устрій світу і взаємодію людей. Майже всі компанії та люди залучені у взаємодії, що описуються теорією ігор. Сутність теорії ігор полягає у встановленні оптимальної стратегії поведінки в конфліктних ситуаціях. Метою теорії ігор є визначення оптимальної стратегії для кожного гравця.
@@ -232,7 +232,6 @@
 						<h2 class="visually-hidden">Возможности которые мы предоставлем</h2>
 					</header>
 					<div class="level__wrapper">
-						<!-- ЗДЕСЬ БУДЕТ ВАША РЕКЛАМА -->
 						<div class="level__wrapper">
 							<div class="level__item level__item--animation">
 								<a target = "_blank" href="#">
