--- a/University/index.html
+++ b/University/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru/uk">
 <head>
-	<title>Кафедра інформаційних систем</title>
-	<meta charset="UTF-8">
-	<meta name="description" content="Сайт кафедри інформаційних систем." />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="icon" type="image/x-icon" href="logo-color-ua.ico">
+	<link rel="stylesheet" property = "stylesheet" href="css/animate.css">
 	<link rel="stylesheet" property = "stylesheet" href="css/bootstrap-grid-3.3.1.min.libs.min.css">
 	<link rel="stylesheet" property = "stylesheet" href="css/main.css">
-	<link rel="stylesheet" property = "stylesheet" href="css/animate.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="description" content="Сайт кафедри інформаційних систем." />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Кафедра інформаційних систем</title>
 </head>
 <body>
 
@@ -29,8 +29,8 @@
 				<a href="#" class="top-line__logo">
 					<img width ="30px" heigth = "50px" src="img/logo-color-ua.png" alt="logo-header" class="top-line__image">
 					<p class = "top-line__text" >
-						Кафедра 
-						інформаційних 
+						Кафедра
+						інформаційних
 						систем
 					</p>
 					<img class = "top-line__line" src="img/line-header.svg" alt="line-header">
@@ -43,7 +43,7 @@
 					</div>
 					<ul class="top-line__list">
 						<li class="top-line__item">Головна</li>
-						<li class="top-line__item">Контакты</li>	
+						<li class="top-line__item">Контакты</li>
 					</ul>
 				</div>
 			</div>
@@ -63,12 +63,6 @@
 					<h2 class="page-header__descript">Ласкаво просимо</h2>
 					<h1 class="page-header__title">На кафедру інформаційних систем</h1>
 					<div class="page-header__information button-items">
-						<!-- <div class="button-items__learn-more">
-							<a href="#">Дізнатись більше</a>
-						</div>
-						<div class="button-items__open">
-							<a href="#">Кафедра</a>
-						</div> -->
 					</div>
 				</div>
 			</div>
@@ -91,7 +85,7 @@
 
 									<div class="block-match__main">
 										<img width = "130px" heigght = "130px" src="img/test.png" alt="">
-										<svg 
+										<svg
 										xmlns="http://www.w3.org/2000/svg"
 										xmlns:xlink="http://www.w3.org/1999/xlink"
 										width="150px" height="2px">
@@ -107,7 +101,7 @@
 									</article>
 								</div>
 								<div class="block-match__item">Дослідження операцій - 1 курс</div>
-								<div class="block-match__item">Теорія ймовірності - 2 курс</div>	
+								<div class="block-match__item">Теорія ймовірності - 2 курс</div>
 								<div class="block-match__item">Чисельні методи - 2 курс</div>
 								<div class="block-match__item">Теорія ігор - 5 курс
 									<article class="block-match__inform">
@@ -122,7 +116,7 @@
 							<div class="block-match__desc">
 								<div class="block-match__main">
 									<img width = "130px" heigght = "130px" src="img/test.png" alt="">
-									<svg 
+									<svg
 									xmlns="http://www.w3.org/2000/svg"
 									xmlns:xlink="http://www.w3.org/1999/xlink"
 									width="150px" height="2px">
@@ -139,8 +133,14 @@
 									<ul>
 										<li>Основі відомості про мережу Інтернет та сервіс World Wide Web;</li>
 										<li>Етапи веб-розробки поняття про back-end та front-end;</li>
-										<li>Розробка веб-сторінок засобами HTML5 та CSS3;</li>
+										<li>Розробка веб-сторінок засобами HTML та CSS;</li>
 									</ul>
+                                    <div class="block-match__language">
+                                        <img width="60px" height="60px" src="../img/PHP_shield.svg" alt="HTML">
+                                        <img width="60px" height="60px" src="../img/css-square.svg" alt="CSS">
+                                        <img width="60px" height="60px" src="../img/js-square.svg" alt="JS">
+                                        <img width="60px" height="60px" src="../img/php-square.svg" alt="PHP">
+                                    </div>
 								</article>
 							</div>
 							<div class="block-match__item">Логічне та функціональне програмування - 3 курс
@@ -160,7 +160,7 @@
 						<div class="block-match__desc">
 							<div class="block-match__main">
 								<img width = "130px" heigght = "130px" src="img/test.png" alt="">
-								<svg 
+								<svg
 								xmlns="http://www.w3.org/2000/svg"
 								xmlns:xlink="http://www.w3.org/1999/xlink"
 								width="150px" height="2px">
@@ -169,20 +169,19 @@
 							</svg>
 							<p>Прикладні дисципліни</p>
 						</div>
-
-						<div class="block-match__item">Технології захисту інформації - 3 курс</div>
+						<div class="block-match__item">Сучасна теорія управління - 2 курс</div>
+						<div class="block-match__item">Організація баз данних - 2 курс
+							<article class="block-match__inform">
+								Адміністрування комп’ютерних систем та баз даних – дисципліна, що навчає створювати об’єкти баз даних у сучасних СУБД та керувати доступом до цих об’єктів, працювати із сучасними Case-засобами проектування баз даних, формувати та налаштовувати схему бази даних, розробляти прикладні програми за допомогою мови SQL, використовувати стандартні методи для захисту об‘єктів бази даних, обирати та оцінювати архітектуру обчислювальних систем, мереж та телекомунікацій.
+							</article>
+						</div>
 						<div class="block-match__item">Теорія прийняття рішення - 2 курс</div>
-						<div class="block-match__item">Інтелектуаьній аналіз даних - 2 курс</div>	
+						<div class="block-match__item">Інтелектуаьній аналіз даних - 2 курс</div>
 						<div class="block-match__item">Технологія компьютерного проектування - 3 курс</div>
+						<div class="block-match__item">Технології захисту інформації - 3 курс</div>
 						<div class="block-match__item">Моделювання систем - 3 курс</div>
 						<div class="block-match__item">Управління IT проектами - 4 курс</div>
 						<div class="block-match__item">Проектування інфомаційних систем - 4 курс</div>
-						<div class="block-match__item">Сучасна теорія управління - 2 курс</div>
-						<div class="block-match__item">Організація баз данних - 2 курс 
-							<article class="block-match__inform">
-								Адміністрування комп’ютерних систем та баз даних – дисципліна, що навчає створювати об’єкти баз даних у сучасних СУБД та керувати доступом до цих об’єктів, працювати із сучасними Case-засобами проектування баз даних, формувати та налаштовувати схему бази даних, розробляти прикладні програми за допомогою мови SQL, використовувати стандартні методи для захисту об‘єктів бази даних, обирати та оцінювати архітектуру обчислювальних систем, мереж та телекомунікацій.  
-							</article>
-						</div>
 					</div>
 				</div>
 
@@ -190,7 +189,7 @@
 					<div class="block-match__desc">
 						<div class="block-match__main">
 							<img width = "130px" heigght = "130px" src="img/test.png" alt="">
-							<svg 
+							<svg
 							xmlns="http://www.w3.org/2000/svg"
 							xmlns:xlink="http://www.w3.org/1999/xlink"
 							width="150px" height="2px">
@@ -198,10 +197,10 @@
 							d="M-0.000,2.000 L-0.000,-0.000 L150.000,-0.000 L150.000,2.000 L-0.000,2.000 Z"/>
 						</svg>
 						<p>Штучний інтелект</p>
-					</div> 
-					<div class="block-match__item">Методи та системи штучного інтелекту - 4 курс</div>
+					</div>
 					<div class="block-match__item">Теорія розпізнавання образів - 2 курс</div>
 					<div class="block-match__item">Нейронні мережі - 4 курс</div>
+					<div class="block-match__item">Методи та системи штучного інтелекту - 4 курс</div>
 					<div class="block-match__item">Експертні системи - 5 курс
 						<article class="block-match__inform">
 							Експертні системи – складова частина досліджень зі штучного інтелекту, познайомить студентів з принципами побудови та методами утворення інформаційних систем, що містять знання та аналітичні здібності експертів щодо деякої галузі застосування, і здатна робити логічні висновки на основі цих знань, тим самим забезпечуючи вирішення специфічних завдань (консультування, аналіз, класифікація, навчання, діагностування, тестування, проектування тощо) без участі експерта.
@@ -391,8 +390,8 @@
 				<iframe class = "contacts__google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2646.7745799851787!2d35.0685634159132!3d48.441664537911024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dbfcd72a7d5cf7%3A0xcaec6d469c04e965!2z0KPQk9Cl0KLQoyDQnNC10YXQsNC90LjRh9C10YHQutC40Lkg0LrQvtGA0L_Rg9GB!5e0!3m2!1sru!2sua!4v1517426359368" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 			<div class="contacts__information">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-				Deleniti explicabo autem obcaecati possimus, 
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+				Deleniti explicabo autem obcaecati possimus,
 				et excepturi accusantium vero delectus ab ex.
 			</div>
 		</div>
@@ -411,7 +410,7 @@
 			Slardarius (c) 2018
 		</h3>
 	</div>
-</footer> 
+</footer>
 </div>
 
 	<!--[if lt IE 9]>
