--- a/University/index.html
+++ b/University/index.html
@@ -61,7 +61,7 @@
 			<div class="page-header__wrapper">
 				<div class="page-header__about-site">
 					<h2 class="page-header__descript">Ласкаво просимо</h2>
-					<h1 class="page-header__title">На кафедру інформаційних систем</h1>
+					<h1 class="page-header__title">на сайт кафедри інформаційних систем</h1>
 					<div class="page-header__information button-items">
 					</div>
 				</div>
@@ -135,12 +135,12 @@
 										<li>Етапи веб-розробки поняття про back-end та front-end;</li>
 										<li>Розробка веб-сторінок засобами HTML та CSS;</li>
 									</ul>
-                                    <div class="block-match__language">
-                                        <img width="60px" height="60px" src="../img/PHP_shield.svg" alt="HTML">
-                                        <img width="60px" height="60px" src="../img/css-square.svg" alt="CSS">
-                                        <img width="60px" height="60px" src="../img/js-square.svg" alt="JS">
-                                        <img width="60px" height="60px" src="../img/php-square.svg" alt="PHP">
-                                    </div>
+									<div class="block-match__language">
+										<img width="60px" height="60px" src="../img/PHP_shield.svg" alt="HTML">
+										<img width="60px" height="60px" src="../img/css-square.svg" alt="CSS">
+										<img width="60px" height="60px" src="../img/js-square.svg" alt="JS">
+										<img width="60px" height="60px" src="../img/php-square.svg" alt="PHP">
+									</div>
 								</article>
 							</div>
 							<div class="block-match__item">Логічне та функціональне програмування - 3 курс
@@ -169,7 +169,6 @@
 							</svg>
 							<p>Прикладні дисципліни</p>
 						</div>
-						<div class="block-match__item">Сучасна теорія управління - 2 курс</div>
 						<div class="block-match__item">Організація баз данних - 2 курс
 							<article class="block-match__inform">
 								Адміністрування комп’ютерних систем та баз даних – дисципліна, що навчає створювати об’єкти баз даних у сучасних СУБД та керувати доступом до цих об’єктів, працювати із сучасними Case-засобами проектування баз даних, формувати та налаштовувати схему бази даних, розробляти прикладні програми за допомогою мови SQL, використовувати стандартні методи для захисту об‘єктів бази даних, обирати та оцінювати архітектуру обчислювальних систем, мереж та телекомунікацій.
@@ -177,11 +176,13 @@
 						</div>
 						<div class="block-match__item">Теорія прийняття рішення - 2 курс</div>
 						<div class="block-match__item">Інтелектуаьній аналіз даних - 2 курс</div>
-						<div class="block-match__item">Технологія компьютерного проектування - 3 курс</div>
 						<div class="block-match__item">Технології захисту інформації - 3 курс</div>
-						<div class="block-match__item">Моделювання систем - 3 курс</div>
+						<div class="block-match__item">Моделювання систем - 3 курс
+							<article class="block-match__inform">
+								Моделювання систем – дисципліна, яка направлена на розв’язання професійних задач із застосуванням інформаційних технологій та інструментальних засобів моделювання процесів функціонування інформаційних систем. Спрямована на проведення імітаційних 
+							</article>
+						</div>
 						<div class="block-match__item">Управління IT проектами - 4 курс</div>
-						<div class="block-match__item">Проектування інфомаційних систем - 4 курс</div>
 					</div>
 				</div>
 
@@ -200,15 +201,22 @@
 					</div>
 					<div class="block-match__item">Теорія розпізнавання образів - 2 курс</div>
 					<div class="block-match__item">Нейронні мережі - 4 курс</div>
-					<div class="block-match__item">Методи та системи штучного інтелекту - 4 курс</div>
+					<div class="block-match__item">Методи та системи штучного інтелекту - 4 курс
+						<article class="block-match__inform">
+							Методи та системи штучного інтелекту – наукові основи дисципліни включають дослідження, що направлені на розв’язання інтелектуальних задач з використанням алгоритмічних методів, які імітують мислення людини. Дисципліна спрямована на систематизацію знань про основні моделі, методи та засоби, які використовуються при розробці систем штучного інтелекту. 
+						</article>
+					</div>
 					<div class="block-match__item">Експертні системи - 5 курс
 						<article class="block-match__inform">
 							Експертні системи – складова частина досліджень зі штучного інтелекту, познайомить студентів з принципами побудови та методами утворення інформаційних систем, що містять знання та аналітичні здібності експертів щодо деякої галузі застосування, і здатна робити логічні висновки на основі цих знань, тим самим забезпечуючи вирішення специфічних завдань (консультування, аналіз, класифікація, навчання, діагностування, тестування, проектування тощо) без участі експерта.
 						</article>
 					</div>
-					<div class="block-match__item">Теорія не чітких множин - 5 курс</div>
 					<div class="block-match__item">Методи еволюційного моделювання - 5 курс</div>
-					<div class="block-match__item">Інтелектуальна обробка</div>
+					<div class="block-match__item">Обчислювальний інтелект - 5 курс
+						<article class="block-match__inform">
+							Обчислювальний інтелект – альтернативний напрям штучного інтелекту, який поєднує у собі елементи навчання, адаптації, еволюції та нечіткої логіки для створення так званих розумних програм. Головними компонентами його є штучні нейронні мережі, еволюційне моделювання та нечітка логіка, крім того він охоплює такі області, як фрактали, теорія хаосу, штучні імунні системи та ін.
+						</article>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -386,13 +394,26 @@
 			<h2 class="visually-hidden">Мы находимся</h2>
 		</header>
 		<div class="contacts__wrapper">
-			<div class="contacts__map">
+			<div id="map" class="contacts__map">
 				<iframe class = "contacts__google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2646.7745799851787!2d35.0685634159132!3d48.441664537911024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dbfcd72a7d5cf7%3A0xcaec6d469c04e965!2z0KPQk9Cl0KLQoyDQnNC10YXQsNC90LjRh9C10YHQutC40Lkg0LrQvtGA0L_Rg9GB!5e0!3m2!1sru!2sua!4v1517426359368" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</div>
 			<div class="contacts__information">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-				Deleniti explicabo autem obcaecati possimus,
-				et excepturi accusantium vero delectus ab ex.
+				<p>Приймальна комісія знаходиться у головному корпусі ДВНЗ УДХТУ:</p>
+				<p>м. Дніпро, пр. Гагаріна, 8</p>
+				<p>тел/факс: +38(0562) 47-34-49</p>
+				<p>e-mail: udhtu@udhtu.edu.ua</p>
+				<p>Дістатись з вокзалу можна трамваєм №1:</p>
+				<p><a target = "_blank" href="http://mtaxi.dp.ua/poi-683/Украинский-государственный-Химико-технологический-университет"><span class = "contacts__tral" >Шляхи </span></a></p>
+				<br>
+				<p>Кафедра інформаційних систем знаходиться у механічному корпусі ДВНЗ УДХТУ:</p>
+				<p>м. Дніпро, вул. Набережна Поремоги, 40, кімн. 611</p>
+				<p>тел. +38(0562) 47-38-87</p>
+				<p>e-mail: kmocc_kis@ukr.net </p>
+				<p>Дістатись з вокзалу можна маршрутними таксі:</p>
+				<p>	<span class = "contacts__tral">№60</span></p>
+
+
+
 			</div>
 		</div>
 	</section>
@@ -424,6 +445,7 @@
 		<link rel="stylesheet" href="libs/ovl/owl.carousel.min.css">
 		<link rel="stylesheet" href="libs/fontawesome/font-awesome.min.css">
 		<script type = 'text/javascript' src = "js/jquery.js"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfY6iuyvpSsAmIXZYK-bhKLLEDBnzNjvM&callback=initMap"></script>
 		<script type = 'text/javascript' src = "libs/ovl/owl.carousel.min.js"></script>
 		<script type = 'text/javascript' src = "js/headhesive.min.js"></script>
 		<script type = 'text/javascript' src = "js/common.js"></script>
